@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.312 (gritter) 8/24/05
+.\"     Sccsid: @(#)nail.1	2.313 (gritter) 10/4/05
 .\"
-.TH NAIL 1 "8/24/05" "nail 11.26" "User Commands"
+.TH NAIL 1 "10/4/05" "nail 11.26" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
@@ -48,16 +48,19 @@ nail \- send and receive Internet mail
 [\fB\-c\fI\ cc-addr\fR] [\fB\-b\fI\ bcc-addr\fR] [\fB\-r\fI\ from-addr\fR]
 [\fB\-h\fI\ hops\fR]
 [\fB\-A\fI\ account\fR]
+[\fB\-S\fI\ variable\fB=\fR[\fIvalue\fR]]
 \fIto-addr\fR .\ .\ .
 .HP
 .ad l
 \fBnail\fR [\fB\-BDdeHiInNRv~\fR] [\fB\-T\fI\ name\fR]
 [\fB\-A\fI\ account\fR]
+[\fB\-S\fI\ variable\fB=\fR[\fIvalue\fR]]
 \fB\-f\fR [\fIname\fR]
 .HP
 .ad l
 \fBnail\fR [\fB\-BDdeinNRv~\fR]
 [\fB\-A\fI\ account\fR]
+[\fB\-S\fI\ variable\fB=\fR[\fIvalue\fR]]
 [\fB\-u\fI\ user\fR]
 .br
 .PD
@@ -197,6 +200,14 @@ Specify subject on command line (only the first argument after the
 .I \-s
 flag is used as a subject; be careful to quote subjects
 containing spaces).
+.TP
+\fB\-S\fI\ variable\fB=\fR[\fIvalue\fR]
+Sets the internal option
+.I variable
+and, in case of a string option,
+assigns
+.I value
+to it.
 .TP
 .BI \-T \ name
 Writes the `Message-Id:' and `Article-Id:' header fields
