@@ -1,4 +1,7 @@
 [11.26] released ...
+* The new "-S variable=[value]" command line option sets the internal option
+  "variable", and, in case of a string option, assigns "value" to it (based
+  on a request by Dmitry Butskoy).
 * When the "next" or newline command is typed as the first command after a
   folder has been opened, the first (new) message is printed even if a
   folder hook has been executed previously (bugreport by Stephen Isard).
